--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -39,13 +39,16 @@
   left: 50%;
   transform: translate(-50%, -50%);
   font-size: 33px;
-  color: #BB0000;
+  color: #DC143C;
+  background-color: #FFCC00;
+  border-radius: 10px;
 }
 
 .article-img{
   width:100%;
   height:150px;
   object-fit: cover;
+  border-radius: 5px;
 }
 
 .show-img{
