--- a/app/views/articles/ranking.html.erb
+++ b/app/views/articles/ranking.html.erb
@@ -3,6 +3,11 @@
   <div class="row bigbox form-bg padding-top-10 padding-bottom-15">
     <% @articles_ranking.each.with_index(1) do |article, i|%>
       <div class="col-xs-12 col-sm-6 col-md-3", id="article-box">
+        <%if article.status_i18n == "非公開" %>
+          <div class="secret">
+            <i class="fas fa-key">非公開</i>
+          </div>
+        <%end%>
         <h5><%=i%>位</h5>
         <%= link_to article, class:"txtcolor imgBx" do %>
           <% if article.image.attached? %>
@@ -12,10 +17,10 @@
           <%end%>
           <div class="content">
             <div class="title"><%= article.title %></div>
-            <%= article.created_at.strftime("%Y/%m/%d %H:%M") %>
-            <br>
-            by <%= article.user.nickname %>
-            <%= article.status_i18n %>
+            <div>投稿者：<%= article.user.nickname %></div>
+            <span><%= article.created_at.strftime("%Y/%m/%d %H:%M") %></span>
+            <i class="fas fa-heart" style="font-size:15px;"><%= article.likes.all.length%></i>
+            <i class="fas fa-comment" style="font-size:15px;"><%= article.comments.all.length%></i>
           </div>
           <%= render 'tag_list', tag_list: article.tag_list%>
         <% end %> <%# link_toのend%>
