--- a/app/views/articles/search.html.erb
+++ b/app/views/articles/search.html.erb
@@ -3,6 +3,11 @@
   <div class="row bigbox">
     <% @articles.each do |article| %>
       <div class="col-xs-12 col-sm-6 col-md-3">
+        <%if article.status_i18n == "非公開" %>
+          <div class="secret">
+            <i class="fas fa-key">非公開</i>
+          </div>
+        <%end%>
         <%= link_to article, class:"txtcolorw imgBx" do %>
         <% if article.image.attached? %>
           <%= image_tag article.image, class: "article-img margin-top-5per" %>
@@ -11,9 +16,10 @@
         <%end%>
         <div class="content">
           <div class="title"><%= article.title %></div>
-          <%= article.created_at.strftime("%Y年%m月%d日 %H時%M分") %>
-          by <%= article.user.nickname %>
-          <%= article.status_i18n %>
+          <div>投稿者：<%= article.user.nickname %></div>
+          <span><%= article.created_at.strftime("%Y/%m/%d %H:%M") %></span>
+          <i class="fas fa-heart" style="font-size:15px;"><%= article.likes.all.length%></i>
+          <i class="fas fa-comment" style="font-size:15px;"><%= article.comments.all.length%></i>
         </div>
       </div>
       <% end %>
