--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,13 +11,13 @@
         <a class="nav-link" style="color:red;" href="/users/sign_out", data-method="delete"><i class="fas fa-sign-out-alt"></i>ログアウト</a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="/top">トップ</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="/">投稿一覧<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/ranking"><i class="fas fa-crown"></i>ランキング</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/top">トップ</a>
       </li>
       <%# <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -38,10 +38,14 @@
       </li>
       <% else %>
       <li class="nav-item">
-        <%= link_to "ログイン", new_user_session_path, class: "nav-link" %>
+        <%= link_to new_user_registration_path, class: "nav-link" do%>
+          <i class="fas fa-user-plus">アカウント作成</i>
+        <%end%>
       </li>
       <li class="nav-item">
-        <%= link_to "アカウント作成", new_user_registration_path, class: "nav-link" %>
+        <%= link_to new_user_session_path, class: "nav-link" do%>
+          <i class="fas fa-sign-in-alt">ログイン</i>
+        <%end%>
       </li>
       <% end %>
     </ul>
