--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,39 @@
+<div id="carouselExampleFade" class="carousel slide carousel-fade col-md-12" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block pics-size" src="assets/back-to-school-913074_1920.jpg" alt="First slide">
+      <div class="carousel-caption">
+        <h3 class="bg-success">ブログへようこそ！</h3>
+      </div>
+    </div>
+    <% @articles.shuffle.first(3).each do |pic|%>
+      <div class="carousel-item">
+      <% if pic.image.attached? %>
+        <%= image_tag pic.image, class: "d-block pics-size", alt:"slide" %>
+        <div class="carousel-caption">
+          <h3 class="text-dark"><%=pic.title%></h3>
+          <p class="text-dark">投稿者：<%=pic.user.nickname%></p>
+        </div>
+      <%else%>
+        <%= image_tag 'noimage.jpg', class: 'd-block pics-size', alt:"slide" %>
+        <div class="carousel-caption">
+          <h3 class="text-dark"><%=pic.title%></h3>
+          <p class="text-dark">投稿者：<%=pic.user.nickname%></p>
+        </div>
+      <%end%>
+      </div>
+    <%end%>
+  </div>
+    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+</div>
+
 <div class="container margin-bottom-10">
 <% if user_signed_in?%>
   <div class="row bigbox">
@@ -45,4 +81,4 @@
 
 <%= paginate @articles if user_signed_in? %>
 
-
+<%= render '/articles/footer'%>
