--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -36,6 +36,7 @@
 
 <div class="container margin-bottom-10">
 <% if user_signed_in?%>
+  <h3 class="margin-top-5per">投稿一覧</h3>
   <div class="row bigbox">
     <% @articles.each do |article| %>
       <div class="col-xs-12 col-sm-6 col-md-3", id="article-box">
