--- a/app/views/articles/search.html.erb
+++ b/app/views/articles/search.html.erb
@@ -1,5 +1,5 @@
 <div class="container margin-bottom-10">
-  <h3 class="txtcolorw">検索一覧</h3>
+  <h3>検索一覧</h3>
   <div class="row bigbox">
     <% @articles.each do |article| %>
       <div class="col-xs-12 col-sm-6 col-md-3" id="article-box">
