index１ページの記事数を12に変更

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -65,7 +65,7 @@
   </div>
 
   <div class="row">
-    <%= link_to "新規作成",new_article_path, class:"margin-top-5per btn btn-primary" %>
+    <%= link_to "新規投稿",new_article_path, class:"margin-top-5per btn btn-primary" %>
   </div>
 </div>
 <% else %> <%# if user_signed_inのelse %>
