--- a/app/views/articles/_footer.html.erb
+++ b/app/views/articles/_footer.html.erb
@@ -22,7 +22,7 @@
         <label>メッセージ :</label>
         <textarea></textarea>
       </div>
-      <a class="cnt-btn">送信</a>
+      <a class="cnt-btn" href="#">送信</a>
     </div>
   </div>
 </div>
