--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,7 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block pics-size" src="assets/back-to-school-913074_1920.jpg" alt="First slide">
-      <div class="carousel-caption">
+      <div class="carousel-caption cap-text">
         <h3 class="bg-success" style="border-radius: 50px; opacity:0.7;">ブログへようこそ！</h3>
       </div>
     </div>
@@ -10,13 +10,13 @@
       <div class="carousel-item">
       <% if pic.image.attached? %>
         <%= image_tag pic.image, class: "d-block pics-size", alt:"slide" %>
-        <div class="carousel-caption">
+        <div class="carousel-caption cap-text">
           <h3 class="bg-secondary" style="border-radius: 50px; opacity:0.7;"><%=pic.title%></h3>
           <p class="bg-secondary" style="border-radius: 50px; opacity:0.7;">投稿者：<%=pic.user.nickname%></p>
         </div>
       <%else%>
         <%= image_tag 'noimage.jpg', class: 'd-block pics-size', alt:"slide" %>
-        <div class="carousel-caption">
+        <div class="carousel-caption cap-text">
           <h3 class="bg-secondary" style="border-radius: 50px; opacity:0.7;"><%=pic.title%></h3>
           <p class="bg-secondary" style="border-radius: 50px; opacity:0.7;">投稿者：<%=pic.user.nickname%></p>
         </div>
