--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,7 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block pics-size" src="assets/back-to-school-913074_1920.jpg" alt="First slide">
-      <div class="carousel-caption cap-text">
+      <div class="carousel-caption cap-text d-none d-md-block">
         <h3 class="bg-success" style="border-radius: 50px; opacity:0.7;">ブログへようこそ！</h3>
       </div>
     </div>
