Nginxで画像が表示されないのでimage_tagに変更

--- a/app/views/articles/top.html.erb
+++ b/app/views/articles/top.html.erb
@@ -26,25 +26,25 @@
         <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="/assets/bunbougu_memo.png" class="icon-img">
+              <%= image_tag 'bunbougu_memo.png', class:"icon-img"%>
             </div>
             <p class="text-contents">ちょっとしたアイデアやタスク管理まで。忘れないように記録しておきましょう。</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="/assets/computer_cloud_storage.png" class="icon-img">
+              <%= image_tag 'computer_cloud_storage.png', class:"icon-img"%>
             </div>
             <p class="text-contents">投稿した内容はインターネット上から投稿、閲覧ができます。</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="/assets/business_idea_share.png" class="icon-img">
+              <%= image_tag 'business_idea_share.png', class:"icon-img"%>
             </div>
             <p class="text-contents">あなたのアイデアが誰かの役に立つかもしれません。みんなでアイデアを共有しましょう。</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="/assets/photo_pinboke.png" class="icon-img">
+              <%= image_tag 'photo_pinboke.png', class:"icon-img"%>
             </div>
             <p class="text-contents">文字だけでなく画像付きで投稿ができます。</p>
           </div>
