--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -29,7 +29,7 @@
     <% elsif @article.unreleased? && current_user.id == @article.user_id%>
       <div class="padding-bottom-15", style="padding: 10px;">
         <%= @article.body %>
-        タグ：<%= render 'tag_list', tag_list: @article.tag_list%>
+        <%= render 'tag_list', tag_list: @article.tag_list%>
         <p class="text-right"><%= @article.created_at.strftime("%Y年%m月%d日 %H時%M分") %></p>
       </div>
         <%= link_to "編集する", edit_article_path, class:"btn btn-primary", style:"margin-bottom:10px; margin-right:10px;" %>
