--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -78,6 +78,7 @@
     <div class="mx-auto margin-top-5per">
       <%= link_to '新規登録する', new_user_registration_path, class:"btn btn-info"%>
       <%= link_to 'ログインする', new_user_session_path, class:"btn btn-warning"%>
+      <%= link_to 'ゲストでログイン', articles_guest_sign_in_path, method: :post, class:"btn btn-light" %>
       <%= link_to 'トップ画面へ', top_path, class:"btn btn-secondary"%>
     </div>
   </div>
