通知画面を微修正

--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -5,7 +5,8 @@
 <% else %>
 <div class="container">
   <div class="row">
-    <p class="mx-auto">通知はありません</p>
+    <h3 class="col-md-12">まだ通知はありません！</h3>
+    <p class="col-md-12">※自分が投稿した記事にいいね、コメントされると通知されます</p>
   </div>
 </div>
 
