--- a/app/views/articles/_footer.html.erb
+++ b/app/views/articles/_footer.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
 
     <div class="contact-form col-md-12">
-      <h1>お問い合わせ</h1>
+      <h3>本ブログへのお問い合わせ</h3>
       <div class="txtb">
         <label>フルネーム :</label>
         <input type="text" name="" value="" placeholder="田中太郎">
