indexのフッターに自分のツイート一覧を表示

--- a/app/views/articles/_footer.html.erb
+++ b/app/views/articles/_footer.html.erb
@@ -1,7 +1,11 @@
 <div class="container">
   <div class="row">
 
-    <div class="contact-form col-md-12">
+    <div class="col-md-5" style="margin-top: 50px;">
+      <a class="twitter-timeline" data-lang="ja" data-width="500" data-height="600" data-theme="light" href="https://twitter.com/programike?ref_src=twsrc%5Etfw">Tweets by programike</a>
+    </div>
+
+    <div class="contact-form col-md-7">
       <h3>本ブログへのお問い合わせ</h3>
       <div class="txtb">
         <label>フルネーム :</label>
