ヘッダーにメニュー追加

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,6 +10,17 @@
       <li class="nav-item active">
         <a class="nav-link" style="color:red;" href="/users/sign_out", data-method="delete"><i class="fas fa-sign-out-alt"></i>ログアウト</a>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          環境
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="http://3.113.47.133/">AWS環境</a>
+          <a class="dropdown-item" href="https://eiji-blog-app.herokuapp.com/">Heroku環境</a>
+          <%# <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a> %>
+        </div>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="/top">トップ</a>
       </li>
@@ -19,17 +30,6 @@
       <li class="nav-item">
         <a class="nav-link" href="/ranking"><i class="fas fa-crown"></i>ランキング</a>
       </li>
-      <%# <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li> %>
       <%# <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
       </li> %>
