--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -47,6 +47,15 @@
           <i class="fas fa-sign-in-alt">ログイン</i>
         <%end%>
       </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          環境
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="http://3.113.47.133/">AWS環境</a>
+          <a class="dropdown-item" href="https://eiji-blog-app.herokuapp.com/">Heroku環境</a>
+        </div>
+      </li>
       <% end %>
     </ul>
     <% if user_signed_in? %>
