--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,42 +1,4 @@
-<div id="carouselExampleFade" class="carousel slide carousel-fade col-md-12" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <%= image_tag 'back-to-school-913074_1920.jpg', class:"d-block pics-size", alt:"First slide"%>
-      <div class="carousel-caption cap-text d-none d-md-block">
-        <h3 class="bg-success" style="border-radius: 50px; opacity:0.7;">ブログへようこそ！</h3>
-      </div>
-    </div>
-    <% @articles.shuffle.first(3).each do |pic|%>
-      <div class="carousel-item">
-        <% if pic.image.attached? %>
-        <%= link_to pic do %>
-          <%= image_tag pic.image, class: "d-block pics-size", alt:"slide" %>
-          <div class="carousel-caption cap-text">
-            <h3 class="bg-secondary" style="border-radius: 50px; opacity:0.7;"><%=pic.title%></h3>
-            <p class="bg-secondary" style="border-radius: 50px; opacity:0.7;">投稿者：<%=pic.user.nickname%></p>
-          </div>
-        <%end%>
-      <%else%>
-        <%= link_to pic do %>
-          <%= image_tag 'noimage.jpg', class: 'd-block pics-size', alt:"slide" %>
-          <div class="carousel-caption cap-text">
-            <h3 class="bg-secondary" style="border-radius: 50px; opacity:0.7;"><%=pic.title%></h3>
-            <p class="bg-secondary" style="border-radius: 50px; opacity:0.7;">投稿者：<%=pic.user.nickname%></p>
-          </div>
-        <%end%>
-      <%end%>
-      </div>
-    <%end%>
-  </div>
-    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-</div>
+<%= render '/articles/carousel', articles: @articles%>
 
 <div class="container margin-bottom-10">
 <% if user_signed_in?%>
