--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="http://3.113.47.133/">AWS環境</a>
           <a class="dropdown-item" href="https://eiji-blog-app.herokuapp.com/">Heroku環境</a>
+          <a class="dropdown-item" href="https://github.com/mitubakuro/myblog_service">本ブログについて（Github）</a>
           <%# <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Something else here</a> %>
         </div>
@@ -54,6 +55,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="http://3.113.47.133/">AWS環境</a>
           <a class="dropdown-item" href="https://eiji-blog-app.herokuapp.com/">Heroku環境</a>
+          <a class="dropdown-item" href="https://github.com/mitubakuro/myblog_service">本ブログについて（Github）</a>
         </div>
       </li>
       <% end %>
