--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,9 +17,9 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="http://3.113.47.133/">AWS環境</a>
           <a class="dropdown-item" href="https://eiji-blog-app.herokuapp.com/">Heroku環境</a>
+          <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="https://github.com/mitubakuro/myblog_service">本ブログについて（Github）</a>
-          <%# <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a> %>
+          <a class="dropdown-item" href="https://about-me-420a5.web.app/">開発者の自己紹介</a>
         </div>
       </li>
       <li class="nav-item">
@@ -56,6 +56,7 @@
           <a class="dropdown-item" href="http://3.113.47.133/">AWS環境</a>
           <a class="dropdown-item" href="https://eiji-blog-app.herokuapp.com/">Heroku環境</a>
           <a class="dropdown-item" href="https://github.com/mitubakuro/myblog_service">本ブログについて（Github）</a>
+          <a class="dropdown-item" href="https://about-me-420a5.web.app/">開発者の自己紹介</a>
         </div>
       </li>
       <% end %>
